# counting-automaton

./: .gitignore  .pylintrc.toml  Makefile  NOTE.txt  README.md  TODO  TODO.txt  main.py  plot_slowdown.ipynb  pyproject.toml  requirements.txt  script.bash  test.py  test_counting_set.py  tmp.py
data/: .gitignore
data/filtered/: all_regexes.txt
data/patterns/: examples.txt
data/test-cases/: example.txt
demo/: demo.py
makefiles/: analysis.mk  computation.mk  data.mk  figures.mk
scripts/: analysis_pattern.py  analysis_pattern.sh  analysis_super_config_sequences.py  analysis_super_config_sequences.sh  analysis_synchronizing.py  append_test_cases.py  check_counter_expansion.py  check_matching.py  compute_super_config_sequences.py  download_and_build_evil_str_gen.sh  download_checker.sh  escape.py  filter.py  filter_pcre_from_snort_rules.sh  normalize.py  post_process_computation_info.py  unescape.py
scripts/analysis/: computation_info.py
scripts/data/: append_test_cases.py  append_test_cases_evil_str_gen.py  filter.py  normalize.py  run_checker.py  unicode_normalize.py
scripts/figures/: plot_case_study.py  plot_computation_comparison.py  plot_counter_range.py  (+2 more)
src/: _position_automaton.py  _re.py  counter_cartesian_super_config.py  counter_vector.py  parser_tools.py  position_automaton.py  position_counter_automaton.py  utils.py
tests/: test_collections.py  test_counting_set.py  test_examples.py  test_more_collections.py  test_nested_counter_expansion.py  test_parser_tools.py  test_position_counter_automaton.py  test_super_config.py  test_to_string.py
(+83 files in other folders)
