[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'counting_automaton'
version = '0.0.0'
dependencies = [
  "contourpy==1.3.0",
  "cycler==0.12.1",
  "fonttools==4.56.0",
  "importlib_resources==6.5.2",
  "kiwisolver==1.4.7",
  "matplotlib==3.9.4",
  "numpy==2.0.2",
  "packaging==24.2",
  "pillow==11.1.0",
  "pyparsing==3.2.1",
  "python-dateutil==2.9.0.post0",
  "six==1.17.0",
  "tikzplotlib==0.10.1",
  "timeout-decorator==0.5.0",
  "webcolors==24.11.1",
  "xeger==0.4.0",
  "zipp==3.21.0",
]
requires-python = '>=3.12'

[tool.setuptools.packages.find]
where = ["src"]
